# dns-products-distrubution

./: .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
data/: branch_products.csv  products.csv  rc_products.csv
migrations/: env.py
migrations/versions/: 12410489a753_create_needs_table.py  260d1de87be5_create_rc_products_table.py  4956b58429d4_create_stores_table.py  4c8b06f3f3b2_create_distribution_centers_table.py  66ff6c3759df_create_category_table.py  82602def6beb_create_logdays_table.py  92149679b7d7_create_products_table.py  a7e8134b48e0_fill_table_logdays.py  b276eae9043d_create_branch_products_table.py  c413ad476157_fill_tables_dc_and_dc_products.py  cb55635657df_fill_table_needs.py  e87674d4a781_fill_tables_categories_and_products.py  eef515e421e0_create_distribution_plan_table.py  f1605ea3f875_fill_tables_stores_and_branch_products.py
src/: distribute.py
utils/: db.py
