[project]
name = "dns-products-distrubution"
version = "0.1.0"
description = "Тестовое задание"
authors = [
    {name = "Alexandra Skopina",email = "44308291+skopina-alexandra@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
