[project]
name = "dns-products-distrubution"
version = "0.1.0"
description = "Тестовое задание"
authors = [
    {name = "Alexandra Skopina",email = "44308291+skopina-alexandra@users.noreply.github.com"}
]
requires-python = ">=3.12"
package-mode = false
readme = "README.md"

dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
